fixed spacing between tables and updated font

--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -1,11 +1,6 @@
-#title {
-  text-align: center;
-  font-family: arial, sans-serif;
-}
-
 #results {
   text-align: center;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   border-collapse: collapse;
   border: 3px solid #ddd;
   width: 100%;
@@ -42,8 +37,7 @@
   background-color: white;
   width: 100%;
   height: 3px;
-  margin-top: 5rem;
-  margin-bottom: 5px;
+  margin-top: 3.5rem;
 }
 
 .resultHeadings {
